# PHYLUM

./: .gitignore  GIT_COMMIT_INSTRUCTIONS.txt  README.md  README_PROJECT.md  README_SETUP.md  action_executor.py  action_models.py  agent_executor.py  agent_persistence.py  agent_tool_call.py  agentic_loop.py  app_main.py  apply_ci.ps1  browser_agent.py  build_backend_sidecar.ps1  canonical_tools.py  command_validator.py  config.py  conftest.py  create_frontend.ps1  credential_store.py  desktop_backend.py  desktop_windows_agent.py  desktop_windows_models.py  document_intelligence_agent.py  download_policy.py  duplicate_detector.py  fs_agent.py  fs_classifier.py  install_playwright.sh  move_tests.ps1  move_tests.sh  multi_provider_client.py  nodes_base.py  nodes_filesystem.py  nodes_reflection.py  nodes_reflection_node.py  nodes_safety.py  nodes_tool_router.py  office_agent.py  (+58 more)
.golden_work/: golden-out.txt
agents/: browser_agent.py  desktop_windows_agent.py  document_intelligence_agent.py  fs_agent.py  fs_classifier.py  fs_config.py  fs_utils.py  office_agent.py  os_inspect_agent.py  os_inspect_powershell.py  os_inspect_wmi.py  planner_agent.py  playwright_manager.py  scraper.py  share_discovery_agent.py  visual_grounding.py  visual_perception.py  visual_verification.py  windows_ui_agent.py
core/: action_executor.py  agent_executor.py  agent_tool_call.py  agentic_loop.py  architecture_invariants.py  autonomy_metrics.py  builder.py  (+56 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
(+241 files in other folders)
