[package]
name = "agente-desktop"
version = "0.1.0"
description = "Agente Desktop"
authors = ["Agente Desktop"]
edition = "2021"

[package.metadata.bundle]
icon = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/icon.ico"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
default = []
